--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -96,13 +96,13 @@ jobs:
               // Stage 5: Navigate to the browse page.
               console.log("Navigating to browse page:", browseUrl);
               await page.goto(browseUrl, { waitUntil: 'networkidle2' });
-              // Wait for 10 seconds before making pubby browse screenshot to ensure all elements load.
-              await sleep(10000);
+              // Wait for 15 seconds before making pubby browse screenshot to ensure all elements load. (Increased from 10s)
+              await sleep(15000);
               await safeScreenshot(page, `./screenshots/pubby_browse_${Date.now()}.png`);
 
               // Ensure filter tags are loaded before attempting to click.
               console.log("Waiting for filter tags to appear...");
-              await page.waitForSelector('.Browse-tag', { visible: true, timeout: 30000 }); // Increased timeout to 30 seconds
+              await page.waitForSelector('.Browse-tag', { visible: true, timeout: 30000 }); 
 
               // Stage 5.5: Click the "Kindle Unlimited" filter button.
               console.log("Attempting to locate and click the 'Kindle Unlimited' filter button...");
